Fixed the navbar becoming clutter with overlapping elements at specific screen sizes

--- a/docs/_static/styles/components/_navigation_bar.scss
+++ b/docs/_static/styles/components/_navigation_bar.scss
@@ -7,19 +7,21 @@ nav.navbar {
         max-width: 100%;
     }
 
-    .navbar-brand img {
-        width: 323px;
-        height: 40px;
-    }
+    .navbar-brand {
+        img {
+            width: 323px;
+            height: 40px;
+        }
 
-    @media only screen and (max-width: $breakpoint-sm) {
-        .navbar-brand.logo {
-            position: absolute;
-            padding-right: 1rem;
+        @media only screen and (max-width: $breakpoint-sm) {
+            &.logo {
+                position: absolute;
+                padding-right: 1rem;
 
-            img {
-                width: auto;
-                height: auto;
+                img {
+                    width: auto;
+                    height: auto;
+                }
             }
         }
     }
@@ -47,6 +49,14 @@ nav.navbar {
 
             form.bd-search {
                 margin-left: auto;
+            }
+        }
+
+        @media only screen and (min-width: 960px) and (max-width: 1048px) {
+            .navbar-item {
+                &:nth-of-type(1), &:nth-of-type(3) {
+                    display: none;
+                }
             }
         }
     }
