--- a/docs/_static/styles/global/_theme.scss
+++ b/docs/_static/styles/global/_theme.scss
@@ -6,8 +6,6 @@ $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 $breakpoint-xxl: 1400px;
 
-$breakpoint-laptop: 1024px;
-
 // Style properties
 
 $text-color: #082e41;
